--- a/mbed_app.json
+++ b/mbed_app.json
@@ -18,7 +18,7 @@
     "target_overrides": {
         "*": {
             "target.network-default-interface-type": "CELLULAR",
-            "mbed-trace.enable": false,
+            "mbed-trace.enable": true,
             "lwip.ipv4-enabled": true,
             "lwip.ethernet-enabled": false,
             "lwip.ppp-enabled": true,
@@ -33,6 +33,15 @@
             "nsapi.default-cellular-apn": 0,
             "nsapi.default-cellular-username": 0,
             "nsapi.default-cellular-password": 0
+        },
+        "DISCO_L496AG": {
+            "target.macros_add": [
+                "CELLULAR_DEVICE=STModCellular",
+                "MDMTXD=PB_6",
+                "MDMRXD=PG_10",
+                "MDMRTS=PG_12",
+                "MDMCTS=PG_11"
+            ]
         }
     }
 }
