Add stmod_cellular modem type
Type can be QUECTEL_BG96 or QUECTEL_UG96.

--- a/mbed_app.json
+++ b/mbed_app.json
@@ -41,7 +41,8 @@
                 "MDMRXD=PG_10",
                 "MDMRTS=PG_12",
                 "MDMCTS=PG_11"
-            ]
+            ],
+			"stmod_cellular.type": "QUECTEL_BG96"
         }
     }
 }
